--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 	<style>
 		table, th, td{
 			border: 1px solid black;
-			border-collapse: collapse:
+/* 			border-collapse: collapse: */
 		}
 	</style>
 </head>
